# loxa

./: .gitignore  Cargo.toml  README.md  deny.toml
.github/workflows/: audit.yml  ci.yml  nightly.yml
.superpowers/sdd/: workspace-store-report.md
docs/backends/: mlx-swift-handoff.md  py-mlx-lm.md
loxa/: Cargo.toml
loxa-app/: .gitattributes  .gitignore  .prettierignore  eslint.config.js  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.mjs  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.browser.config.ts  vitest.config.ts
loxa-app/scripts/: bundle-digest.mjs  dev-runtime.mjs  dev-runtime.test.mjs  package-app.mjs  prepare-sidecar.mjs  tauri.mjs  verify-sidecar.mjs
loxa-app/src/: App.css  App.tsx  index.css  main.tsx
loxa-app/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
loxa-app/src-tauri/src/: bootstrap.rs  lib.rs  main.rs  window_layout.rs
loxa-app/src-tauri/tests/: bootstrap.rs
loxa-app/src-tauri/tests/fixtures/: fake loxa executable
loxa-app/src-tauri/tests/support/: mod.rs
loxa-app/src/app/: AnnotatedRoutes.browser.test.tsx  App.test.tsx  App.tsx  AppShell.browser.test.tsx  AppShell.tsx  AppSidebar.tsx  CspProbe.browser.test.ts  CspProbe.browser.test.tsx  CspProbePanel.test.tsx  CspProbePanel.tsx  SidebarHeader.tsx  SidebarNavigation.tsx  SidebarResizeHandle.tsx  SidebarRuntimeStatus.tsx  ThemeFoundation.browser.test.tsx  WorkspaceToolbar.tsx  accessibilityCss.test.ts  brandAsset.test.ts  consoleCountProbe.test.ts  consoleCountProbe.ts  cspProbeBootstrap.ts  cspProbeCleanupContract.test.ts  cspProbeElision.test.ts  cspProbeStore.test.ts  cspProbeStore.ts  services.test.ts  services.ts  themeContract.test.ts  themeContrast.test.ts
loxa-app/src/chat/: ChatComposer.browser.test.tsx  ChatComposer.module.css  ChatComposer.test.tsx  ChatComposer.tsx  ChatModelControl.module.css  ChatModelControl.test.tsx  ChatModelControl.tsx  ChatScreen.module.css  ChatScreen.test.tsx  ChatScreen.tsx  ChatTranscript.module.css  ChatTranscript.test.tsx  ChatTranscript.tsx  ConversationHistoryItem.tsx  ConversationList.browser.test.tsx  ConversationList.module.css  ConversationList.test.tsx  ConversationList.tsx  (+17 more)
loxa-app/tests/: bundle-digest.test.ts  iconPackaging.test.ts  workspace-isolation.test.ts
loxa-core/: Cargo.toml
loxa-core/src/: calibration.rs  detect.rs  download.rs  evidence.rs  gateway.rs  hardware.rs  lib.rs  model_inventory.rs  plan.rs  provider.rs  qualification.rs  registry.rs  resolve.rs  selector.rs  slice3_test_support.rs  supervisor.rs  swift_mlx_protocol.rs  windows_file.rs  workload.rs
loxa-core/src/chat_history/: migrations.rs  mod.rs  repository.rs
loxa-core/src/control/: auth.rs  client.rs  contracts.rs  mod.rs  operations.rs  test_support.rs
loxa-core/src/diagnostics/: child_retention.rs  mod.rs  storage.rs
loxa-core/src/engine/: mod.rs  py_mlx_lm.rs  swift_mlx.rs
loxa-core/src/provider/: llama.rs  managed_llama.rs  mod.rs  ollama.rs  transport.rs
loxa-core/src/supervisor/: lifecycle.rs  readiness.rs  state.rs  teardown.rs
loxa-mlx/: Package.resolved  Package.swift
loxa-node/: Cargo.toml
loxa-node/src/: actor.rs  artifact_coordinator.rs  chat_history.rs  chat_routes.rs  control_router.rs  download_control.rs  download_scheduler.rs  engine_session.rs  http_observability.rs  lib.rs  lifecycle_controller.rs  main.rs  model_lifecycle.rs  operation_cancellation.rs  production_lifecycle.rs  v2_control_router.rs  verification_scheduler.rs
loxa-node/src/bootstrap/: builder.rs  diagnostics.rs  mod.rs  paths.rs
loxa-node/src/bootstrap/diagnostics/: delivery.rs  encoder.rs  mod.rs  tests.rs
loxa-node/src/control_state/: mod.rs  recovery.rs  repository.rs  schema.rs  state_machine.rs  worker.rs
loxa-node/src/control_state/test_support/: machine.rs  mod.rs  recovery.rs  storage.rs  worker.rs
loxa-node/src/daemon/: mod.rs  signals.rs
loxa-node/src/identity/: mod.rs  non_unix.rs  tests.rs  unix.rs
loxa-node/src/runtime/: fatal_shutdown.rs  mod.rs  node_runtime.rs
loxa-node/src/slice3_test_support/: compatibility.rs  execution.rs  mod.rs  router.rs  runtime.rs
loxa-node/src/slice4_test_support/: artifact.rs  capacity.rs  compatibility.rs  execution_lanes.rs  lifecycle_controller.rs  mod.rs  persistence.rs  runtime.rs
loxa-node/tests/: unsupported_control_state_platform.rs
loxa-protocol/: Cargo.toml
loxa-protocol/src/: identity.rs  lib.rs  v1.rs  v2.rs
loxa-protocol/tests/: protocol.rs
loxa/src/: bench.rs  cli.rs  main.rs  model_commands.rs  test_support.rs
loxa/tests/: py_mlx_live.rs
(+103 files in other folders)
