[package]
name = "loxa-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
indicatif = "0.18.6"
reqwest = { version = "0.13.4", default-features = false, features = ["blocking", "rustls"] }
sha2 = "0.11.0"
sysinfo = "0.39.5"

[dev-dependencies]
tempfile = "3.27.0"
