[package]
name = "loxa-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[features]
default = []
composition-test-support = []

[dependencies]
axum = "0.8"
futures-util = "0.3"
getrandom = "0.4.3"
hmac = "0.13.0"
indicatif = "0.18.6"
libc = "0.2.186"
loxa-protocol = { path = "../loxa-protocol" }
reqwest = { version = "0.13.4", default-features = false, features = ["blocking", "json", "rustls", "stream"] }
rusqlite = { version = "=0.40.1", default-features = false, features = ["bundled", "limits"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11.0"
subtle = "2.6.1"
sysinfo = "0.39.5"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }
tracing = { version = "0.1.44", default-features = false, features = ["std", "release_max_level_info"] }

[dev-dependencies]
tempfile = "3.27.0"
