[package]
name = "loxa-node"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "loxa-node"
path = "src/main.rs"

[dependencies]
axum = "0.8"
futures-util = "0.3"
loxa-core = { path = "../loxa-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "stream"] }
