[package]
name = "loxa-node"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "loxa-node"
path = "src/main.rs"

[dependencies]
axum = "0.8"
futures-util = "0.3"
getrandom = "0.4.3"
loxa-core = { path = "../loxa-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }
tower-http = { version = "0.6.11", default-features = false, features = ["request-id", "trace"] }
tracing = { version = "0.1.44", features = ["release_max_level_info"] }
tracing-appender = "0.2.5"
tracing-subscriber = { version = "0.3.23", features = ["fmt"] }

[dev-dependencies]
loxa-core = { path = "../loxa-core", features = ["composition-test-support"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream"] }
tower = "0.5"
