[package]
name = "loxa-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
uuid = { version = "=1.23.5", default-features = false, features = ["std", "v4"] }

[dev-dependencies]
serde_json = "1"
